Testing: aligning stop and pause mobile

--- a/main.css
+++ b/main.css
@@ -141,13 +141,13 @@ summary of changes:
   .half-box.stop-button-wrapper {
     position: relative;
     float: left;
-    left: -10%;
+    text-align: left;
     border: 1px solid black;
   }
   .half-box.pause-button-wrapper {
     position: relative;
     float: right;
-    right: -10%;
+    text-align: right;
     border: 1px solid black;
   }
 
